# bib-satysfi

./: Satyristes  satysfi-bib-doc.opam  satysfi-bib.opam
convert/: convert.py
doc/: bib-content.satyh  doc.saty
src/: bib.satyh  style-default.satyh
